Use client vm
try to improve test performance
remove also deprecated permsize attribute