@@ -117,7 +117,7 @@
                         <exclude>**/it/*</exclude>
                         <exclude>**/it/**/*</exclude>
                     </excludes>
-                    <argLine>-Xms256M -Xmx1024M -XX:PermSize=256M</argLine>
+                    <argLine>-client -Xms256M -Xmx1g</argLine>
                     <systemProperties>
                         <spring.profiles.active>dev</spring.profiles.active>
                         <application.system.cache>false</application.system.cache>
@@ -137,7 +137,7 @@
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <version>2.19.1</version>
                         <configuration>
-                            <argLine>-Xms512M -Xmx2048M -XX:PermSize=512M -Xss2M -Dfile.encoding=UTF-8</argLine>
+                            <argLine>-client -Xms1g -Xmx2g -Xss2M -Dfile.encoding=UTF-8</argLine>
                             <includes>
                                 <include>**/it/*</include>
                                 <include>**/it/**/*</include>
